# PrismQ.IdeaInspiration.Sources.Content.Shorts.YouTubeShortsSource

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  WINDOWS_QUICKSTART.md  cli.py  config.py  database.py  db_utils.py  pyproject.toml  quickstart.sh  requirements.txt  setup.bat  setup.sh  setup_db.bat  setup_db.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
Model/: README.md  __init__.py  base.py  db_context.py  youtube_shorts_source.py  youtube_video.py
PrismQ.Idea.Classification/: MANIFEST.in  MIGRATION_GUIDE.md  README.md  requirements.txt  setup.py
PrismQ.Idea.Classification/prismq/: __init__.py
PrismQ.Idea.Classification/tests/: test_story_detection_integration.py  test_story_detector.py
_meta/docs/: CHANNEL_SCRAPING.md  CONFIGURATION.md  CONTRIBUTING.md  DATA_COLLECTION_ANALYSIS.md  DATA_COLLECTION_DIAGRAM.md  DATA_COLLECTION_GUIDE.md  DATA_COLLECTION_SUMMARY.md  DATA_FIELDS_REFERENCE.md  SCRAPING_BEST_PRACTICES.md  WINDOWS_QUICKSTART.md
_meta/issues/: KNOWN_ISSUES.md  (+1 more)
docs/: CHANNEL_SCRAPING.md  CONFIGURATION.md  CONTRIBUTING.md  DATA_COLLECTION_ANALYSIS.md  DATA_COLLECTION_DIAGRAM.md  DATA_COLLECTION_GUIDE.md  DATA_COLLECTION_INDEX.md  DATA_COLLECTION_SUMMARY.md  DATA_FIELDS_REFERENCE.md  METRICS.md  MIGRATION_SHARED_CLASSIFIERS.md  MODEL_IMPLEMENTATION.md  README.md  SCRAPING_BEST_PRACTICES.md  WINDOWS_QUICKSTART.md  YTB_DATA_MODEL.md
idea_collector/: __init__.py  cli.py  config.py  database.py
issues/: KNOWN_ISSUES.md  README.md  ROADMAP.md
mod/: Model  README.md  __init__.py  config.py  database.py
old_sort_it/: README.md  __init__.py  cli.py  module.json
processor/: __init__.py  idea_processor.py
scripts/: README.md  init_db.py  quickstart.bat  quickstart.sh  setup.bat  setup.sh
sources/: youtube_plugin.py  youtube_trending_plugin.py
src/: __init__.py  cli.py  config.py  database.py  metrics.py  story_detector.py
tests/: test_config.py  test_database.py  test_database_security.py  test_metrics.py  test_model.py  test_new_model.py  test_processor.py  test_scoring.py  test_story_detection_integration.py  test_story_detector.py  test_youtube_channel_plugin.py  test_youtube_plugin.py
(+35 files in other folders)
