[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismq-idea-collector"
version = "1.0.0"
description = "A Python CLI that scrapes idea inspirations from YouTube Shorts and Reddit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "praw>=7.7.1",
    "google-api-python-client>=2.100.0",
    "yt-dlp>=2023.10.13",
    "sqlite-utils>=3.35",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
idea-collector = "idea_collector.cli:main"
